edited number 3. font size 24 was not showing correctly. corrected in CSS with a different class name.

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,11 @@
 .odd{
     background-color: lightpink;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.odd1{
+    background-color: lightpink;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
 }
 #second{
     color: blue;
